# GameOfLife

./: CMakeLists.txt  LICENSE  README.md  iCODE_OF_CONDUCT.md  main.cpp
include/: Life.hh  param.hh
src/: '  Life.cc  main.cc
